[package]
name = "hello_golem"
version = "0.1.0"
authors = ["knokko <knokogator@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
golem = "0.1.7"
blinds = { version = "0.2.0"}
mint = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
glow = { version = "0.4.0", features=["web-sys"] }
wasm-bindgen = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glow = { version = "0.4.0" }
